may have fixed blurry logo, need to check after pushing commit, works on local mobile but not on local browser mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -12339,6 +12339,10 @@ ul#slide-list{
 .img-crop {
 	max-height: 200px;
 }
+.delta {
+	content: url('/images/delta_large.png');
+	height: 50px;
+}
 }
 
 @media (min-width: 769px) {
